Fix excessive padding under header on mobile category pages

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -10101,6 +10101,9 @@ a.sports-icon.floor-hockey {
   overflow: hidden;
   margin: 0 -30px 0 -20px;
 }
+#small-text-banner .header-image figure .field-media-image div {
+  padding-bottom: 0 !important;
+}
 #small-text-banner .header-image figure .media--ratio {
   height: auto;
 }
